# SimpleTaskManager

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
proto/: ModelControllerService.proto  Requests.proto  Responses.proto  Task.proto  TaskManagerService.proto  TaskNode.proto
src/: client.cpp  main.cpp  server.cpp
src/client/: GRPCClientEndPoint.cpp  GRPCClientEndPoint.h  client.cpp
src/controller/: Controller.cpp  Controller.h  ControllerRequestResult.cpp  ControllerRequestResult.h  DefaultModelController.cpp  DefaultModelController.h  ModelController.h  TaskValidator.cpp  TaskValidator.h
src/logs/: DefaultLogging.h  LogInit.cpp  LogInit.h
src/model/: DueTime.cpp  DueTime.h  GRPCServerEndPoint.cpp  GRPCServerEndPoint.h  IModel.h  IdGenerator.cpp  IdGenerator.h  MainTask.cpp  MainTask.h  Model.h  SequentIdGenerator.h  SubTask.cpp  SubTask.h  Task.cpp  Task.h  TaskId.cpp  TaskId.h  TaskManager.cpp  TaskManager.h  TaskNodeFactoryMethod.cpp  TaskNodeFactoryMethod.h
src/model/Tasks/: SubTask.cpp  SubTask.h  Task.cpp  Task.h
src/model/abstract_model/: IModel.h  TaskTransfer.cpp  TaskTransfer.h
src/model/controller/: Controller.cpp  Controller.h  ControllerRequestResult.cpp  ControllerRequestResult.h  DefaultModelController.cpp  DefaultModelController.h  ModelController.cpp  ModelController.h
src/model/id/: IdGenerator.cpp  IdGenerator.h  TaskId.cpp  TaskId.h
src/model/id_generation/: IdGenerator.h  SequentIdGenerator.cpp  SequentIdGenerator.h
src/model/tasks/: SubTask.cpp  SubTask.h  Task.cpp  Task.h  TaskBuilder.cpp  TaskBuilder.h
src/options/: ProgramOptionsParsers.cpp  ProgramOptionsParsers.h
src/persistence/: FilePersistence.cpp  FilePersistence.h  Persistence.h  PersistenceFactory.cpp  PersistenceFactory.h  TaskManagerPersistence.cpp  TaskManagerPersistence.h  TasksPersistence.cpp  TasksPersistence.h
src/proto/: Task.proto
src/server/: GRPCServerEndPoint.cpp  GRPCServerEndPoint.h  server.cpp
src/utilities/: DueDateUtilities.h  ModelControllerResultConvertors.cpp  ModelControllerResultConvertors.h  SaveLoadStatus.h  TaskActionResult.h  TaskBuilder.cpp  TaskBuilder.h  TaskComparators.cpp  TaskComparators.h  TaskConvertors.cpp  TaskConvertors.h  TaskIdUtilities.h  TaskManagerResultFactoryMethods.cpp  TaskManagerResultFactoryMethods.h  TaskPriorityUtilities.h  TaskUtilities.cpp  TaskUtilities.h  TaskValidator.cpp  TaskValidator.h
src/view/: ConsoleMultiFunctionalPrinter.cpp  ConsoleMultiFunctionalPrinter.h  ConsolePrinter.h  ConsoleStateMachine.cpp  ConsoleStateMachine.h  GRPCModelController.cpp  GRPCModelController.h  StateContext.cpp  StateContext.h  UserInterface.cpp  UserInterface.h  ViewController.cpp  ViewController.h  WizardContext.cpp  WizardContext.h
src/view/commands/: AddSubTaskCommand.cpp  AddSubTaskCommand.h  AddTaskCommand.cpp  AddTaskCommand.h  Command.h  CommandInterface.h  CommandResult.cpp  CommandResult.h  CompleteTaskCommand.cpp  CompleteTaskCommand.h  DeleteTaskCommand.cpp  DeleteTaskCommand.h  EditTaskCommand.cpp  EditTaskCommand.h  LoadCommand.cpp  LoadCommand.h  RemoveLabelCommand.cpp  RemoveLabelCommand.h  SaveCommand.cpp  SaveCommand.h  SetLabelCommand.cpp  SetLabelCommand.h  ShowTasksCommand.cpp  ShowTasksCommand.h
src/view/commands/factory/: CommandFactory.cpp  CommandFactory.h
src/view/console_io/: ConsolePrinter.cpp  ConsolePrinter.h  ConsoleReader.cpp  ConsoleReader.h  ConsoleUtilities.cpp  ConsoleUtilities.h
src/view/context/: WizardContext.cpp  WizardContext.h
src/view/controller/: ViewController.cpp  ViewController.h
src/view/printer/: ConsolePrinter.cpp  ConsolePrinter.h
src/view/states/: AddLabelState.cpp  AddLabelState.h  AddSubTaskState.cpp  AddTaskState.cpp  CompleteTaskState.cpp  CompleteTaskState.h  DeleteTaskState.cpp  DeleteTaskState.h  EditTaskState.cpp  EndState.cpp  EndState.h  HelpState.cpp  HelpState.h  IWizardState.h  InputShowByLabelState.cpp  InputShowByLabelState.h  InputShowParametersState.cpp  InputShowParametersState.h  QuitState.cpp  QuitState.h  RemoveLabelState.cpp  RootState.cpp  RootState.h  ShowState.cpp  ShowState.h  State.h  StateInterface.h  WizardStatePrinter.h
src/view/states/abstract/: IWizardState.cpp  IWizardState.h  StateDependencies.cpp  StateDependencies.h  WizardStateConsole.cpp  WizardStateConsole.h  WizardStateController.cpp  (+6 more)
src/view/user_interface/: ConsoleStateMachine.cpp  ConsoleStateMachine.h  StateContext.cpp  StateContext.h  UserInterface.cpp  UserInterface.h
tests/: IntegrationTests.cpp  TaskTest.cpp  main.cpp
tests/client/: GRPCClientEndPointTest.cpp
tests/model/: DefaultModelControllerTests.cpp  DueTimeTest.cpp  GRPCServerEndPointTest.cpp  HighLoadTaskManagerTest.cpp  IdGeneratorTest.cpp  MockPersistence.h  MockPersistenceFactory.h  ModelControllerTests.cpp  MultiThreadTaskManagerTest.cpp  SequentIdGeneratorTest.cpp  TaskIdTest.cpp  TaskManagerMultiThreadTest.cpp  TaskManagerTest.cpp  TaskTest.cpp
tests/model/Tasks/: SubTaskTest.cpp  TaskTest.cpp
tests/model/tasks/: SubTaskTest.cpp  TaskBuilderTest.cpp  TaskTest.cpp
tests/persistence/: PersistenceFactoryTests.cpp  PersistenceTest.cpp
tests/server/: GRPCServerEndPointTest.cpp
tests/utilities/: MockTaskValidator.h  ModelControllerResultConvertorsTest.cpp  TaskBuilderTest.cpp  TaskComparatorsTests.cpp  TaskConvertorsTests.cpp  TaskManagerResultFactoryMethodsTest.cpp
tests/view/: CommandFactoryTests.cpp  CommandsTests.cpp  ConsoleUtilitiesTests.cpp  GRPCClientEndPointTest.cpp  GRPCModelControllerTest.cpp  LazyStatesFactoryTests.cpp  StateMachineTests.cpp  StatesFactoryTests.cpp  StatesTests.cpp  UserInterfaceTests.cpp  ViewControllerTests.cpp
tests/view/mocks/: MockCommand.h  MockCommandFactory.h  MockConsolePrinter.h  MockConsoleReader.h  MockConsoleStateMachine.h  MockController.h  MockModel.h  MockModelControllerServiceStub.h  MockState.h  MockStateDependencies.h  MockStateMachine.h  MockStatesFactory.h  MockTaskValidator.h  MockUserInterface.h  MockWizardContext.h  MockWizardStatesFactory.h
tests/view/states/: ShowStateTest.cpp  StateTest.cpp  StatesTests.cpp
(+52 files in other folders)
